// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypographyComponents should match a snapshot for H1 1`] = `
<h1
  className=""
  id=""
>
  Test text
</h1>
`;

exports[`TypographyComponents should match a snapshot for H2 1`] = `
<h2
  className=""
  id=""
>
  Test text
</h2>
`;

exports[`TypographyComponents should match a snapshot for H3 1`] = `
<h3
  className=""
  id=""
>
  Test text
</h3>
`;

exports[`TypographyComponents should match a snapshot for H4 1`] = `
<h4
  className=""
  id=""
>
  Test text
</h4>
`;

exports[`TypographyComponents should match a snapshot for H5 1`] = `
<h5
  className=""
  id=""
>
  Test text
</h5>
`;

exports[`TypographyComponents should match a snapshot for H6 1`] = `
<h6
  className=""
  id=""
>
  Test text
</h6>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH1 1`] = `
<h1
  className=""
  id=""
>
  Test text
</h1>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH2 1`] = `
<h2
  className=""
  id=""
>
  Test text
</h2>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH3 1`] = `
<h3
  className=""
  id=""
>
  Test text
</h3>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH4 1`] = `
<h4
  className=""
  id=""
>
  Test text
</h4>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH5 1`] = `
<h5
  className=""
  id=""
>
  Test text
</h5>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH6 1`] = `
<h6
  className=""
  id=""
>
  Test text
</h6>
`;
